# jobs_case

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
job/: __init__.py
jobs/: main.py
models/: model.joblib
notebooks/: eda.ipynb  models.ipynb
scripts/: format.sh  requirements.py  test.sh
tests/: test_main.py
