[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jobs"
authors = [{name = "Caio Mescouto Terra de Souza", email = "caiomescouto@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
	"pandas >=1.5, <1.6",
	"numpy >=1.24, <1.25",
	"optuna >=3.1, <3.2",
	"scikit-learn >=1.2, <1.3",
	"imbalanced-learn >=0.10, <0.11",
	"fastapi>=0.68.0,<0.69.0",
	"pydantic>=1.8.0,<2.0.0",
	"uvicorn>=0.15.0,<0.16.0",
	"pyarrow >=11.0, <11.1",
]

[project.urls]
Home = "https://github.com/caiomts/data_wizards_case"

[project.optional-dependencies]
test = [
	"pytest >= 7.2, <7.3",
	"pytest-cov >= 4.0, <4.1",
]

docs = [
	"mkdocs >=1.4, <1.5",
	"mkdocstrings[python] >=0.20, <0.21",
]

dev = [
	"black >=23.1, <23.2",
	"flake8 >=6.0, <6.1",
	"isort >=5.12, <5.13",
]

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"


